--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "automated-scout17",
   "version": "0.0.0",
-  "description": "FRC 2017 automated scouting system",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:Team4334/automated-scout17.git"
-  },
-  "author": "Team 4334",
-  "license": "GPLv3",
-  "bugs": {
-    "url": "https://github.com/Team4334/automated-scout17/issues"
+  "dependencies": {
+    "body-parser": "~1.16.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.0",
+    "express": "~4.14.1",
+    "morgan": "~1.7.0",
+    "node-sass-middleware": "0.9.8",
+    "pug": "~2.0.0-beta10",
+    "serve-favicon": "~2.3.2"
   }
 }
