--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "node-sass-middleware": "0.9.8",
     "pug": "~2.0.0-beta10",
     "serve-favicon": "~2.3.2",
-    "thebluealliance": "^1.2.3"
+    "thebluealliance": "git://github.com/trevorkhtsang/node-thebluealliance.git#commit-f04341f7a8184841b65d2627c58c89cf93996d9e"
   }
 }
