--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "debug": "~2.6.0",
     "express": "~4.14.1",
     "morgan": "~1.7.0",
+    "node-cache": "^4.1.1",
     "node-sass-middleware": "0.9.8",
+    "numeric": "^1.2.6",
     "pug": "~2.0.0-beta10",
     "serve-favicon": "~2.3.2",
     "thebluealliance": "git://github.com/trevorkhtsang/node-thebluealliance.git"
